<resources>
    <string name="app_name">Mon Candidature</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="item_default_pName">Post Name</string>
    <string name="item_default_cName">Company Name</string>
    <string name="item_default_date_applied">Applied Date</string>
    <string name="item_default_status">Not contacted</string>
    <string name="item_btn_modifier">Modifier</string>
    <string name="item_btn_delete">Delete</string>

    <string name="name">name</string>
    <string name="mark">note</string>
    <string name="level">Niveau</string>
    <string name="id_student">N° d\'étudiant</string>

    <string name="id_candidature">N° candidature</string>
    <string name="poste">Titre du poste</string>
    <string name="entreprise">Nom entreprise</string>
    <string name="lien">Url de l\'offre</string>
    <string name="date_candidature">Postuler le : </string>
    <string name="date_entretien">Entretien le  :</string>
    <string name="date_rappel">Rappel le : </string>
    <string name="commentaires">Commentaires</string>
    <string name="save">Enregistrer</string>
    <string name="showall">Show All</string>
    <string name="label_rejected">Refusé</string>

</resources>
