<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.ModificationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/img_cv6"
        android:alpha="0.1"/>

    <EditText
        android:id="@+id/id_candidature"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:hint="N° candidature"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        />

    <EditText
        android:id="@+id/poste"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/id_candidature"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:hint="Titre du poste"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/entreprise"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/poste"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:hint="Nom de l\'entreprise"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/lien"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/entreprise"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:hint="Lien de l'offre"
        android:inputType="textUri|textPersonName"
        android:paddingLeft="10dp" />


    <EditText
        android:id="@+id/date_candidature"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_below="@+id/lien"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/date_candidature"
        android:inputType="date" />

    <EditText
        android:id="@+id/date_entretien"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_below="@+id/lien"
        android:layout_toRightOf="@id/date_candidature"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/date_entretien"
        android:inputType="date" />

    <EditText
        android:id="@+id/date_rappel"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_candidature"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:layout_marginLeft="40dp"
        android:hint="@string/date_rappel"
        android:inputType="date|none" />

    <EditText
        android:id="@+id/commentaires"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@+id/date_rappel"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:hint="Commentaires"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <Button
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/commentaires"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="18dp"
        android:text="@string/save"
        tools:ignore="UnknownId" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/showall"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/save"

        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:layout_centerHorizontal="true"
        android:text="@string/showall"
        tools:ignore="UnknownId" />

    <CheckBox
        android:id="@+id/rejected"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/date_rappel"
        android:layout_below="@+id/date_candidature"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:text="@string/label_rejected"
        android:textSize="18dp"
        android:textColor="@color/black"
        />


</RelativeLayout>